<resources>
    <string name="app_name">Droid Cafe</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_dessert_recipes">Hello Dessert Recipes</string>
    <string name="hello_pastries_recipes">Hello Pastries Recipes</string>
    <string name="hello_stores_fragment">Hello Stores Fragment</string>
    <string name="tab_1">Desserts</string>
    <string name="tab_2">Pastries</string>
    <string name="tab_3">Stores</string>
    <string name="dessert_recipes">Dessert Recipes</string>
    <string name="browse_our_dessert_recipes">Browse Our Dessert Recipes</string>
    <string name="recipe_title">Recipe Title</string>
    <string name="prep_and_cook_time_2hrs">Prep and Cook Time: 2hrs</string>
    <string name="recipe_description">Recipe Description</string>
    <string name="how_to_prepare_donuts">How to Prepare Donuts</string>
    <string name="pastries_recipes">Pastries Recipes</string>
    <string name="browse_our_pastries_recipes">Browse our pastries recipes</string>
    <string name="droid_cafe_stores">Droid Cafe Stores</string>
    <string name="rate_our_stores">Rate our stores</string>
    <string name="store_name">Store Name</string>
    <string name="opens_daily_from_8_00_a_m">Opens daily from 8:00 a.m</string>
    <string name="store_description">Store Description</string>
    <string name="like">Like</string>
    <string name="comment">Comment</string>
    <string name="share">Share</string>
    <string name="about_galleria">About Galleria</string>
    <string name="desserts">Desserts</string>
    <string name="pastries">Pastries</string>
    <string name="stores">Stores</string>
    <string name="contact_us">Contact Us</string>
    <string name="about_us">About Us</string>
    <string name="share_app">Share App</string>
    <string name="janice_malu">Janice Malu</string>
    <string name="janice_malu_strathmore_edu">janice.malu@strathmore.edu</string>
    <string-array name="dessert_title">
        <item>Ice cream Cone</item>
        <item>Donut</item>
        <item>Frozen Yogurt</item>
        <item>Ice cream Cone</item>
        <item>Donut</item>
        <item>Frozen Yogurt</item>
        <item>Ice cream Cone</item>
        <item>Donut</item>
        <item>Frozen Yogurt</item>
    </string-array>
    <string-array name="dessert_descriptions">
        <item>Ice cream has chocolate and vanilla filling</item>
        <item>Donuts are glazed and sprinkled with candy</item>
        <item>Froyo is a premium self-serve frozen yogurt</item>
        <item>Ice cream has chocolate and vanilla filling</item>
        <item>Donuts are glazed and sprinkled with candy</item>
        <item>Froyo is a premium self-serve frozen yogurt</item>
        <item>Ice cream has chocolate and vanilla filling</item>
        <item>Donuts are glazed and sprinkled with candy</item>
        <item>Froyo is a premium self-serve frozen yogurt</item>
    </string-array>
    <string-array name="pastries_title">
        <item>Cookies</item>
        <item>Croissant</item>
        <item>Waffles</item>
        <item>Cookies</item>
        <item>Croissant</item>
        <item>Waffles</item>
        <item>Cookies</item>
        <item>Croissant</item>
        <item>Waffles</item>
    </string-array>
    <string-array name="pastries_descriptions">
        <item>Cookies with chocolate chips inside</item>
        <item>Croissants made with almond</item>
        <item>Waffles topped with vanilla and chocolate ice cream</item>
        <item>Cookies with chocolate chips inside</item>
        <item>Croissants made with almond</item>
        <item>Waffles topped with vanilla and chocolate ice cream</item>
        <item>Cookies with chocolate chips inside</item>
        <item>Croissants made with almond</item>
        <item>Waffles topped with vanilla and chocolate ice cream</item>
    </string-array>
    <string-array name="store_titles">
        <item>Galleria</item>
        <item>Sarit Centre</item>
        <item>West Gate</item>
        <item>Galleria</item>
        <item>Sarit Centre</item>
        <item>West Gate</item>
        <item>Galleria</item>
        <item>Sarit Centre</item>
        <item>West Gate</item>
    </string-array>
    <string name="icon">Icon</string>
    <string name="pizzas">Pizzas</string>
    <string name="burgers">Burgers</string>
    <string name="cocktails">Cocktails</string>
    <string name="ingredients">Ingredients</string>
    <string name="the_steps">The Steps</string>
    <string name="enjoy">Enjoy</string>
    <string name="galleria_details">
        If you are looking for a shopping experience that will truly surpass your expectations, a dining destination with such rich variety it leaves you totally spoilt for choice or a lifestyle experience that is
        fully enriching and rewarding, then look no further than Galleria Shopping Mall, the home of the unlimited experience.
    </string>
    <string name="galleria_scope">
        Originally designed to cater for the unmet need of the Karengat area by providing a wide selection of stores with a
        variety of products and services, Galleria Shopping Mall now stands on a class of its own as a vibrant modern shopping,
        dining and entertainment destination serving the Karen, Langata, Rongai, Ngong, Nairobi West, South B as well as the rest
        of Nairobi City residents.In many ways, shopping at Galleria leaves you with a feeling of the great outdoors,
        a tribute to its unique architecture creatively designed unlike the ‘big box’ model with lots of wide open spaces
        to let in the beautiful African weather. The mall is also adorned with a warm colour scheme to capture and reflect
        the Kenyan red earth and the African sunset.


    </string>
    <string name="our_scope">Our Scope</string>
    <string name="how_to_prepare_pizzas">How To Prepare Pizzas</string>
    <string name="pizza_ingredients">
        • 2 ½ cups warm water (600 mL) \n
        • 1 teaspoon sugar \n
        • 2 teaspoons active dry yeast \n
        • 7 cups all-purpose flour (875 g), plus more for dusting \n
        • 6 tablespoons extra virgin olive oil, plus more for greasing \n
        • 1 ½ teaspoons kosher salt \n
        • ¼ cup semolina flour (30 g)
    </string>
    <string name="pizza_steps">
        1. Bloom the yeast by sprinkling the sugar and yeast in the warm water. Let sit for 10 minutes, until bubbles form on the surface. \n \n
        2. In a large bowl, combine the flour and salt. Make a well in the middle and add the olive oil and bloomed yeast mixture. Using a spoon, mix until a shaggy dough begins to form. \n \n
        3. Once the flour is mostly hydrated, turn the dough out onto a clean work surface and knead for 10-15 minutes. The dough should be soft, smooth, and bouncy. Form the dough into a taut round. \n \n
        4. Grease a clean, large bowl with olive oil and place the dough inside, turning to coat with the oil. Cover with plastic wrap. Let rise for at least an hour, or up to 24 hours. \n \n
        5. Punch down the dough and turn it out onto a lightly floured work surface. Knead for another minute or so, then cut into 4 equal portions and shape into rounds. \n \n
        6. Lightly flour the dough, then cover with a kitchen towel and let rest for another 30 minutes to an hour while you prepare the sauce and any other ingredients. \n \n
        7. Preheat the oven as high as your oven will allow, between 450-500˚F (230-260˚C). Place a pizza stone, heavy baking sheet (turn upside down so the surface is flat), or cast iron skillet in the oven. \n \n
        8. Meanwhile, make the tomato sauce: Add the salt to the can of tomatoes and puree with an immersion blender, or transfer to a blender or food processor, and puree until smooth. \n \n
        9. Once the dough has rested, take a portion and start by poking the surface with your fingertips, until bubbles form and do not deflate. \n \n
        10. Then, stretch and press the dough into a thin round. Make it thinner than you think it should be, as it will slightly shrink and puff up during baking. \n \n
        11. Sprinkle semolina onto an upside down baking sheet and place the stretched crust onto it. Add the sauce and ingredients of your choice. \n \n
        12. Slide the pizza onto the preheated pizza stone or pan. Bake for 15 minutes, or until the crust and cheese are golden brown.
    </string>
    <string name="how_to_prepare_burgers">How to prepare burgers</string>
    <string name="burgers_ingredients">
        • 1 small onion , diced \n
        • 500g good-quality beef mince \n
        • 1 egg \n
        • 1 tbsp vegetable oil \n
        • 4 burger buns \n
        • All or any of the following to serve: sliced tomato, beetroot, horseradish sauce,
        mayonnaise, ketchup, handful iceberg lettuce, rocket, watercress
    </string>
    <string name="burgers_steps">
        1. Tip 500g beef mince into a bowl with 1 small diced onion and 1 egg, then mix. \n \n
        2. Divide the mixture into four. Lightly wet your hands. Carefully roll the mixture into balls, each about the size of a tennis ball.\n \n
        3. Set in the palm of your hand and gently squeeze down to flatten into patties about 3cm thick. Make sure all the burgers are the same thickness so that they will cook evenly.\n \n
        4. Put on a plate, cover with cling film and leave in the fridge to firm up for at least 30 mins.\n \n
        5. Heat the barbecue to medium hot (there will be white ash over the red hot coals – about 40 mins after lighting). Lightly brush 1 side of each burger with vegetable oil.\n \n
        6. Place the burgers, oil-side down, on the barbecue. Cook for 5 mins until the meat is lightly charred. Don’t move them around or they may stick.\n \n
        7. Oil the other side, then turn over using tongs. Don’t press down on the meat, as that will squeeze out the juices.\n \n
        8. Cook for 5 mins more for medium. If you like your burgers pink in the middle, cook 1 min less each side. For well done, cook 1 min more.\n \n
        9. Take the burgers off the barbecue. Leave to rest on a plate so that all the juices can settle inside.\n \n
        10. Slice 4 burger buns in half. Place, cut-side down, on the barbecue rack and toast for 1 min until they are lightly charred. Place a burger inside each bun, then top with your choice of accompaniment. \n \n
    </string>
    <string name="how_to_prepare_cocktails">How to prepare Cocktails</string>
    <string name="cocktails_ingredients">
        • 45ml lemon vodka \n
        • 15ml triple sec \n
        • 30ml cranberry juice \n
        • 10ml lime juice \n
        • ice \n
        • For the garnish \n
        orange zest, or a lime wedge on the rim of the glass.
    </string>
    <string name="cocktails_steps">
        1. Shake ingredients with ice and strain into a cocktail glass.\n \n
        2. To make the garnish: hold a 3cm round piece of orange zest about 10cm above your cosmo and very carefully wave it over a lit match or lighter flame.
        Bend the outer edge of the zest in towards the flame so that the orange oils are released, then drop the zest into your drink.
    </string>
</resources>