<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="250dp"
    android:background="@color/colorMaroon"
    android:gravity="bottom"
    android:padding="20dp">

    <ImageView
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:src="@drawable/user"
        android:contentDescription="@string/icon" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/janice_malu"
        android:textSize="24sp"
        android:fontFamily="@font/saker_bold"
        android:textColor="@color/colorWhite"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/saker_bold"
        android:text="@string/janice_malu_strathmore_edu"
        android:textSize="14sp"
        android:textColor="@color/colorWhite"/>
</LinearLayout>