<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@color/colorWhite"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/cocktails_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/how_to_prepare_cocktails"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/colorMaroon" />

    <TextView
        android:id="@+id/cocktails_ingredients"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cocktails_title"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:textColor="@color/colorWhite"
        android:text="@string/cocktails_ingredients"
        android:background="@color/lightRed"/>

    <ScrollView
        android:id="@+id/cocktails_scroll"
        android:layout_below="@id/cocktails_ingredients"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/cocktails_steps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cocktails_steps"
            android:textColor="@color/colorBlack"
            android:padding="10dp"/>

    </ScrollView>
</RelativeLayout>