<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <RelativeLayout
        android:id="@+id/store_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/store_image"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:adjustViewBounds="true"/>
        <TextView
            android:id="@+id/store_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/store_image"
            android:text="@string/store_name"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:theme="@style/ThemeOverlay.AppCompat.Light"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:background="@color/colorMaroon"
            android:textColor="@color/colorWhite"/>

        <TextView
            android:id="@+id/store_open"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/store_title"
            android:padding="10dp"
            android:drawableStart="@drawable/ic_access_time_black_24dp"
            android:text="@string/opens_daily_from_8_00_a_m"
            android:theme="@style/ThemeOverlay.AppCompat.Light"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:drawableLeft="@drawable/ic_access_time_black_24dp" />

        <TextView
            android:id="@+id/store_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/store_open"
            android:padding="5dp"
            android:textColor="@color/colorBlack"
            android:textStyle="italic"
            android:text="@string/store_description"
            android:theme="@style/ThemeOverlay.AppCompat.Light"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>

        <View
            android:id="@+id/store_divider"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_below="@id/store_description"
            android:background="@color/colorMaroon"/>

        <RatingBar
            android:id="@+id/store_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/store_divider"
            android:numStars="6"
            android:rating="5"
            android:padding="8dp"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:theme="@style/rating_bar"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/store_rate"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_favorite"
                android:text="@string/like"
                android:padding="5dp"
                android:layout_weight="1"
                android:textColor="@color/colorBlack"
                android:textSize="18sp"
                android:drawableLeft="@drawable/ic_favorite" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_edit"
                android:text="@string/comment"
                android:padding="5dp"
                android:layout_weight="1"
                android:textColor="@color/colorBlack"
                android:textSize="18sp"
                android:drawableLeft="@drawable/ic_edit" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_share"
                android:text="@string/share"
                android:padding="5dp"
                android:layout_weight="1"
                android:textColor="@color/colorBlack"
                android:textSize="18sp"
                android:drawableLeft="@drawable/ic_share" />
        </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>