<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
        <ImageView
            android:id="@+id/recipe_image"
            android:layout_width="match_parent"
            android:layout_height="150sp"
            android:background="@color/colorGrey"
            android:paddingBottom="10dp"
            android:adjustViewBounds="true"/>

        <TextView
            android:id="@+id/recipe_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recipe_title"
            android:textColor="@color/colorWhite"
            android:layout_alignBottom="@id/recipe_image"
            android:padding="10dp"
            android:layout_marginTop="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.Light"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

        <TextView
            android:id="@+id/recipe_prep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prep_and_cook_time_2hrs"
            android:textColor="@color/colorGrey"
            android:layout_below="@id/recipe_title"
            android:padding="10dp"
            android:layout_marginTop="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.Light"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:drawableLeft="@drawable/ic_access_time_black_24dp"
            android:drawableStart="@drawable/ic_access_time_black_24dp" />

        <!--The Horizontal Line-->

        <View
            android:id="@+id/divider"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_below="@id/recipe_prep"
            android:background="@color/colorMaroon"/>

        <TextView
            android:id="@+id/recipe_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recipe_description"
            android:textColor="@color/colorBlack"
            android:layout_below="@id/divider"
            android:padding="8dp"
            android:layout_marginTop="3dp"
            android:textStyle="italic"
            android:theme="@style/ThemeOverlay.AppCompat.Light"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>

    </RelativeLayout>
</androidx.cardview.widget.CardView>