<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecipeActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:id="@+id/donut_card">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/recipe_view_image"
                android:layout_width="match_parent"
                android:layout_height="150sp"
                android:background="@color/colorGrey"
                android:paddingBottom="10dp"
                android:adjustViewBounds="true"/>

            <TextView
                android:id="@+id/recipe_view_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="placeholder"
                android:textColor="@color/colorWhite"
                android:layout_alignBottom="@id/recipe_view_image"
                android:padding="10dp"
                android:layout_centerHorizontal="true"
                android:textSize="19sp"
                android:layout_marginTop="4dp"/>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_below="@id/donut_card"
        android:layout_centerHorizontal="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <RelativeLayout
                android:id="@+id/ingredients_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textAlignment="center"
                android:background="@color/lightRed">

                <TextView
                    android:id="@+id/ingredients"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ingredients"
                    android:gravity="center"
                    android:textColor="@color/colorWhite"
                    android:textAllCaps="true"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_centerHorizontal="true"/>

                <TextView
                    android:id="@+id/recipe_view_ingredients"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorWhite"
                    android:padding="10dp"
                    android:layout_below="@id/ingredients"
                    android:text="placeholder text"/>


            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/steps_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ingredients_layout"
                android:layout_marginTop="10dp"
                android:padding="10dp">

                <TextView
                    android:id="@+id/steps_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorMaroon"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textAllCaps="true"
                    android:layout_margin="5dp"
                    android:text="@string/the_steps"/>

                <TextView
                    android:id="@+id/recipe_view_steps"
                    android:layout_below="@id/steps_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|end"
                    android:text="placeholder text"
                    android:textColor="@color/colorBlack"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/enjoy"
                    android:textAllCaps="true"
                    android:layout_below="@id/recipe_view_steps"
                    android:textColor="@color/colorMaroon"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:textStyle="bold"/>

            </RelativeLayout>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>